--- a/projects/mona-ui-tester/src/app/app.component.scss
+++ b/projects/mona-ui-tester/src/app/app.component.scss
@@ -4,7 +4,13 @@ div.wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     & > div {
         margin: 5px;
+        display: flex;
     }
+}
+
+mona-drop-down-list {
+    width: 150px;
 }
