--- a/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -6,7 +6,8 @@
             <span>{{selectedItem?.text}}</span>
         </ng-container>
         <ng-container *ngIf="valueTemplate">
-            <ng-container [ngTemplateOutlet]="valueTemplate" [ngTemplateOutletContext]="{$implicit: selectedItem?.data}"></ng-container>
+            <ng-container [ngTemplateOutlet]="valueTemplate"
+                          [ngTemplateOutletContext]="{$implicit: selectedItem?.data}"></ng-container>
         </ng-container>
     </div>
     <div class="mona-dropdown-list-menu">
@@ -16,20 +17,28 @@
 
 <ng-template #dropdownPopupTemplate>
     <ul class="mona-dropdown-items-list">
-        <ng-container *ngFor="let group of dropdownData">
-            <ng-container>
-                <ng-container *ngIf="!groupTemplate">
-                    <li class="mona-dropdown-list-group-header" *ngIf="group.key">{{group.key}}</li>
+        <ng-container *ngIf="dropdownData.length !== 0; else emptyTemplate;">
+            <ng-container *ngFor="let group of dropdownData">
+                <ng-container>
+                    <ng-container *ngIf="!groupTemplate">
+                        <li class="mona-dropdown-list-group-header" *ngIf="group.key">{{group.key}}</li>
+                    </ng-container>
+                    <ng-container *ngIf="groupTemplate && group.key">
+                        <li class="mona-dropdown-list-group-header">
+                            <ng-container [ngTemplateOutlet]="groupTemplate"
+                                          [ngTemplateOutletContext]="{$implicit: group.key}"></ng-container>
+                        </li>
+                    </ng-container>
                 </ng-container>
-                <ng-container *ngIf="groupTemplate">
-                    <li class="mona-dropdown-list-group-header">
-                        <ng-container [ngTemplateOutlet]="groupTemplate" [ngTemplateOutletContext]="{$implicit: group.key}"></ng-container>
-                    </li>
-                </ng-container>
+                <li class="mona-dropdown-list-item" *ngFor="let item of group.source"
+                    [ngClass]="{'mona-selected': item.value === selectedItem?.value, 'mona-disabled': item.disabled}"
+                    (click)="onDropDownItemClick(item)">
+                    <mona-drop-down-list-item [dataItem]="item" [itemTemplate]="itemTemplate" ></mona-drop-down-list-item>
+                </li>
             </ng-container>
-            <li *ngFor="let item of group.source" (click)="onDropDownItemClick(item)">
-                <mona-drop-down-list-item [dataItem]="item" [itemTemplate]="itemTemplate"></mona-drop-down-list-item>
-            </li>
         </ng-container>
+        <ng-template #emptyTemplate>
+            <div class="mona-dropdown-no-data">No data.</div>
+        </ng-template>
     </ul>
 </ng-template>
