Implement text box directive

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -110,6 +110,10 @@
         </mona-drop-down-list>
     </div>
 
+    <div>
+        <input type="text" monaTextBox />
+    </div>
+
 </div>
 
 <ng-template #popupContentTemplate>
