Start implementing text box component

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -111,7 +111,8 @@
     </div>
 
     <div>
-        <input type="text" monaTextBox />
+        <input type="text" monaTextBox style="margin-right: 10px;" />
+        <mona-text-box></mona-text-box>
     </div>
 
 </div>
