--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -85,7 +85,7 @@
         <mona-chip style="margin-left: 5px;" [removable]="true">
             <div style="width: 100%; height: 100%; display: flex; align-items: center;">
                 <div
-                    style="background: var(--mona-background-dark); border-right: 1px solid var(--mona-border-color); height: 100%; width: 23px; display: flex; align-items: center; justify-content: center; margin-left: -9px;">
+                    style="background: var(--mona-background-dark); border-right: 1px solid var(--mona-border-color); height: 100%; width: 25px; display: flex; align-items: center; justify-content: center; margin-left: -9px;">
                     <span class="fa fa-user-alt" style="margin-left: 2px;"></span>
                 </div>
                 <span style="margin-left: 4px;">Username</span>
@@ -112,7 +112,14 @@
 
     <div>
         <input type="text" monaTextBox style="margin-right: 10px;" />
-        <mona-text-box></mona-text-box>
+        <mona-text-box [ngModel]="textBoxValue" (ngModelChange)="onTextBoxValueChange($event)">
+            <ng-template monaTextBoxPrefixTemplate>
+                <fa-icon [icon]="searchIcon"></fa-icon>
+            </ng-template>
+            <ng-template monaTextBoxSuffixTemplate>
+                <fa-icon [icon]="snowflakeIcon" style="color: lightblue;"></fa-icon>
+            </ng-template>
+        </mona-text-box>
     </div>
 
 </div>
