Implement text area directive

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -122,6 +122,10 @@
         </mona-text-box>
     </div>
 
+    <div>
+        <textarea monaTextArea [ngModel]="textBoxValue" rows="4" style="width: 422px;"></textarea>
+    </div>
+
 </div>
 
 <ng-template #popupContentTemplate>
