Initial check box implementation

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -126,6 +126,11 @@
         <textarea monaTextArea [ngModel]="textBoxValue" rows="4" style="width: 422px;"></textarea>
     </div>
 
+    <div>
+        <input type="checkbox" monaCheckBox id="checkbox1" [indeterminate]="true" />
+        <label for="checkbox1">Checkbox Label 1</label>
+    </div>
+
 </div>
 
 <ng-template #popupContentTemplate>
