--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -30,6 +30,7 @@
 @mixin disabled {
     pointer-events: none;
     opacity: 0.5;
+    cursor: default;
     background-color: var(--mona-background-dark);
 }
 
@@ -261,7 +262,7 @@ input[type="checkbox"][monaCheckBox] {
             margin-right: 4px;
             vertical-align: middle;
             color: transparent;
-            transition:background-color 0.15s ease-out, color 0.15s ease-out;
+            transition:background-color 0.15s ease-out, color 0.15s ease-out, border 0.15s ease-out;
         }
         &:active:before:not(:disabled) {
             box-shadow: 0 0 10px -3px var(--mona-shadow-color);
@@ -277,26 +278,81 @@ input[type="checkbox"][monaCheckBox] {
     &:disabled + label {
         cursor: default;
         pointer-events: none;
-        @include disabled;
     }
     &:disabled + label:before {
         cursor: default;
         pointer-events: none;
         @include disabled;
+        border: 1px solid var(--mona-border-color);
     }
     &:checked:disabled + label:before {
         background-color: var(--mona-disabled-color);
         color: var(--mona-disabled-color);
         @include disabled;
+        border: 1px solid var(--mona-border-color);
     }
     &:indeterminate + label:before {
         content: " ";
         background-color: var(--mona-primary);
         color: var(--mona-background);
-        border: 3.5px solid var(--mona-background);
+        border: 3px solid var(--mona-background);
     }
     &:indeterminate:disabled + label:before {
         @include disabled;
+        border: 3px solid var(--mona-border-color);
+    }
+}
+
+/** Radio Button */
+input[type="radio"][monaRadioButton] {
+    display: none;
+    & + label {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        color: var(--mona-text);
+        font-size: 1.2rem;
+        user-select: none;
+        &:before {
+            content: " ";
+            background-color: var(--mona-background);
+            border: 3px solid var(--mona-background);
+            border-radius: 50%;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: calc(var(--mona-input-height) - 8px);
+            height: calc(var(--mona-input-height) - 8px);
+            margin-right: 4px;
+            vertical-align: middle;
+            color: transparent;
+            transition: all 0.15s ease-out, border 0s linear;
+        }
+        &:active:before:not(:disabled) {
+            box-shadow: 0 0 10px -3px var(--mona-shadow-color);
+        }
+    }
+    &:disabled + label {
+        cursor: default;
+        pointer-events: none;
+    }
+    &:disabled + label:before {
+        @include disabled;
+        border: 3px solid var(--mona-border-color);
+    }
+    &:not(:disabled) + label:before {
+        border: 1px solid var(--mona-border-color);
+    }
+    &:checked + label:before {
+        content: " ";
+        background-color: var(--mona-primary-dark);
+        color: var(--mona-text);
+        border-width: 3px;
+    }
+    &:checked:disabled + label:before {
+        @include disabled;
+        background-color: var(--mona-primary-dark);
+        border: 3px solid var(--mona-border-color);
     }
 }
 
