--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -134,6 +134,13 @@ mona-button-group button[monaButton] {
     }
 }
 
+/** Split Button */
+.mona-split-button-popup {
+    & ul li {
+        height: var(--mona-input-height) !important;
+    }
+}
+
 
 /** Dropdowns */
 
