--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -147,6 +147,11 @@
         </mona-switch>
     </div>
 
+    <div style="display: flex; flex-direction: column;">
+        <mona-slider style="width: 200px;"></mona-slider>
+        <mona-slider style="width: 250px;"></mona-slider>
+    </div>
+
 </div>
 
 <ng-template #popupContentTemplate>
