Improvements to slider dragging

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -150,6 +150,8 @@
     <div style="display: flex; flex-direction: column;">
         <mona-slider style="width: 200px;"></mona-slider>
         <mona-slider style="width: 250px;"></mona-slider>
+        <mona-slider style="width: 555px;"></mona-slider>
+        <mona-slider style="width: 125px;"></mona-slider>
     </div>
 
 </div>
