--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
@@ -5,8 +5,9 @@
     <div class="mona-slider-tick-list">
         <ng-container *ngFor="let tx of [0,1,2,3,4,5,6,7,8,9,10]">
             <span class="mona-slider-tick" #tickSpanElement>
-                <span (click)="onTickClick($event, tickSpanElement, sliderTrackElement, sliderHandlerElement)"
-                      (mousemove)="onTickMouseMove($event, tickSpanElement, sliderTrackElement, sliderHandlerElement)"></span>
+                <span [ngClass]="{'dragging': dragging}"
+                    (click)="onTickClick($event, tickSpanElement, sliderTrackElement, sliderHandlerElement)"
+                      ></span>
             </span>
         </ng-container>
     </div>
