--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
@@ -1,5 +1,5 @@
 div.mona-slider {
-    height: var(--mona-input-height);
+    height: calc(var(--mona-input-height) * 2);
     position: relative;
     &.mona-slider-horizontal {
         display: flex;
@@ -22,12 +22,12 @@ div.mona-slider {
         }
         & .mona-slider-handler {
             position: absolute;
-            width: calc(var(--mona-input-height) - 16px);
-            height: calc(var(--mona-input-height) - 16px);
+            width: calc(var(--mona-input-height) - 12px);
+            height: calc(var(--mona-input-height) - 12px);
             display: flex;
             align-items: center;
             justify-content: center;
-            top: calc(var(--mona-input-height) / 2 - (var(--mona-input-height) - 16px) / 2);
+            //top: calc(var(--mona-input-height) / 2 - (var(--mona-input-height) - 12px) / 2);
             z-index: 4;
             transition: left ease-out 0.15s;
         }
@@ -37,16 +37,23 @@ div.mona-slider {
             grid-auto-flow: column;
             grid-auto-columns: minmax(0, 1fr);
             width: 100%;
-            height: calc(var(--mona-input-height) - 11px);
+            //height: calc(var(--mona-input-height) - 11px);
+            height: 100%;
+            align-items: center;
         }
         & span.mona-slider-tick {
             display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            height: calc(var(--mona-input-height) - 11px);
             & > span {
                 width: 100%;
                 height: 100%;
                 z-index: 3;
+                &.dragging {
+                    height: calc(var(--mona-input-height) * 2);
+                }
             }
         }
     }
-
 }
