--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
@@ -1,16 +1,31 @@
 <div class="mona-slider mona-slider-horizontal">
     <div class="mona-slider-track" #sliderTrackElement>
-        <div class="mona-slider-highlight" [ngStyle]="{'right': 'calc(100% - ' + handlerLeftPosition + 'px)'}"></div>
+        <div class="mona-slider-highlight" [ngClass]="{'dragging': dragging}" [ngStyle]="{'right': 'calc(100% - ' + handlerLeftPosition + 'px)'}"></div>
     </div>
-    <div class="mona-slider-tick-list">
-        <ng-container *ngFor="let tx of [0,1,2,3,4,5,6,7,8,9,10]">
-            <span class="mona-slider-tick" #tickSpanElement>
+    <div class="mona-slider-tick-list" #tickListElement>
+        <ng-container *ngFor="let tick of ticks; let tx = index;">
+            <span class="mona-slider-tick" #tickSpanElement *ngIf="tx !== 0">
                 <span [ngClass]="{'dragging': dragging}"
-                    (click)="onTickClick($event, tickSpanElement, sliderTrackElement, sliderHandlerElement)"
-                      ></span>
+                    (click)="onTickClick(tickSpanElement, sliderTrackElement, sliderHandlerElement)"></span>
+            </span>
+            <span class="mona-slider-tick" #tickSpanElement *ngIf="tx !== ticks.length - 1">
+                <span [ngClass]="{'dragging': dragging}"
+                      (click)="onTickClick(tickSpanElement, sliderTrackElement, sliderHandlerElement)"></span>
             </span>
         </ng-container>
     </div>
-    <div class="mona-slider-handler" [style.left.px]="handlerLeftPosition"
+    <div class="mona-slider-tick-label-list">
+        <ng-container *ngFor="let tick of ticks;">
+            <span class="mona-slider-tick-label">
+                <span *ngIf="!tickValueTemplate">{{tick.value}}</span>
+                <span *ngIf="tickValueTemplate">
+                    <ng-container *ngTemplateOutlet="tickValueTemplate; context: {$implicit: tick.value}"></ng-container>
+                </span>
+            </span>
+        </ng-container>
+    </div>
+    <div class="mona-slider-handler"
+         [ngClass]="{'dragging': dragging}"
+         [style.left.px]="handlerLeftPosition === 0 ? sliderHandlerElement.clientWidth / -2 : handlerLeftPosition"
          (mousedown)="onHandlerMouseDown()" #sliderHandlerElement></div>
 </div>
