--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
@@ -1,6 +1,7 @@
 div.mona-slider {
     height: calc(var(--mona-input-height) * 2);
     position: relative;
+    user-select: none;
     &.mona-slider-horizontal {
         display: flex;
         align-items: center;
@@ -18,7 +19,10 @@ div.mona-slider {
             bottom: 0;
             right: 0;
             border: none;
-            transition: right ease-out 0.15s;
+            transition: right ease-in-out 0.2s;
+            &.dragging {
+                transition: none;
+            }
         }
         & .mona-slider-handler {
             position: absolute;
@@ -27,9 +31,11 @@ div.mona-slider {
             display: flex;
             align-items: center;
             justify-content: center;
-            //top: calc(var(--mona-input-height) / 2 - (var(--mona-input-height) - 12px) / 2);
             z-index: 4;
-            transition: left ease-out 0.15s;
+            transition: left ease-in-out 0.2s;
+            &.dragging {
+                transition: none;
+            }
         }
         & .mona-slider-tick-list {
             position: absolute;
@@ -37,7 +43,6 @@ div.mona-slider {
             grid-auto-flow: column;
             grid-auto-columns: minmax(0, 1fr);
             width: 100%;
-            //height: calc(var(--mona-input-height) - 11px);
             height: 100%;
             align-items: center;
         }
@@ -54,6 +59,24 @@ div.mona-slider {
                     height: calc(var(--mona-input-height) * 2);
                 }
             }
+        }
+        & .mona-slider-tick-label-list {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            align-items: flex-end;
+            display: flex;
+            justify-content: space-between;
+            user-select: none;
+        }
+
+        & span.mona-slider-tick-label {
+            position: relative;
+            align-items: center;
+            justify-content: center;
+            height: calc(var(--mona-input-height) - 11px);
+            display: flex;
+            width: 0;
         }
     }
 }
