--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -254,7 +254,7 @@ input[type="checkbox"][monaCheckBox] {
         align-items: center;
         cursor: pointer;
         color: var(--mona-text);
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         user-select: none;
         &:before {
             content: "\2714";
@@ -278,7 +278,8 @@ input[type="checkbox"][monaCheckBox] {
     &:checked + label:before {
         background-color: var(--mona-primary-dark);
         color: var(--mona-text);
-        padding-bottom: 3px;
+        padding-bottom: 2px;
+        padding-right: 1px;
         font-weight: bold;
         font-size: 1.1rem;
     }
@@ -318,7 +319,7 @@ input[type="radio"][monaRadioButton] {
         align-items: center;
         cursor: pointer;
         color: var(--mona-text);
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         user-select: none;
         &:before {
             content: " ";
@@ -333,7 +334,7 @@ input[type="radio"][monaRadioButton] {
             margin-right: 4px;
             vertical-align: middle;
             color: transparent;
-            transition: all 0.15s ease-out, border 0.15s ease-out;
+            transition: all 0.15s ease-out, border 0.1s ease-out;
         }
         &:active:before:not(:disabled) {
             box-shadow: 0 0 10px -3px var(--mona-shadow-color);
@@ -378,7 +379,7 @@ input[type="radio"][monaRadioButton] {
             border: 1px solid var(--mona-border-color);
         }
         & .mona-slider-tick-list {
-            & span.mona-slider-tick {
+            & span.mona-slider-tick.mona-slider-tick-visible {
                 &:first-child {
                     border-left: 1px solid var(--mona-border-color);
                 }
