--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -150,12 +150,14 @@
     <div style="display: flex; flex-direction: column; z-index: 100;">
 <!--        <mona-slider style="width: 200px;"></mona-slider>-->
 <!--        <mona-slider style="width: 250px;"></mona-slider>-->
-        <mona-slider style="width: 539px;">
+        <mona-slider [(ngModel)]="sliderValue" style="width: 539px;">
             <ng-template monaSliderTickValueTemplate let-value>
                 <span style="color: dodgerblue; font-weight: 600;" *ngIf="value%3===0">{{value}}</span>
-                <span style="color: deeppink; font-weight: 600;" *ngIf="value%3!==0">{{value}}</span>
+                <span style="color: #00a86b; font-weight: 600;" *ngIf="value%3!==0">{{value}}</span>
             </ng-template>
         </mona-slider>
+
+<!--        <input type="number" [(ngModel)]="sliderValue" />-->
 <!--        <mona-slider style="width: 125px;"></mona-slider>-->
     </div>
 
