--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
@@ -19,7 +19,7 @@ div.mona-slider {
             bottom: 0;
             right: 0;
             border: none;
-            transition: right ease-in-out 0.2s;
+            transition: width ease-in-out 0.2s;
             &.dragging {
                 transition: none;
             }
@@ -50,7 +50,7 @@ div.mona-slider {
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            height: calc(var(--mona-input-height) - 11px);
+            height: calc(var(--mona-input-height) - 12px);
             & > span {
                 width: 100%;
                 height: 100%;
