Keyboard navigation support

--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
@@ -1,22 +1,22 @@
 <div class="mona-slider mona-slider-horizontal">
     <div class="mona-slider-track" #sliderTrackElement>
-        <div class="mona-slider-highlight" [ngClass]="{'dragging': dragging}" [style.width.%]="handlerLeftPosition <= 0 ? 0 : handlerLeftPosition"></div>
+        <div class="mona-slider-highlight" [ngClass]="{'mona-dragging': dragging}" [style.width.%]="handlerLeftPosition <= 0 ? 0 : handlerLeftPosition"></div>
     </div>
     <div class="mona-slider-tick-list" #tickListElement>
         <ng-container *ngFor="let tick of ticks; let tx = index;">
             <span class="mona-slider-tick" [ngClass]="{'mona-slider-tick-visible': showTicks}" #tickSpanElement *ngIf="tx !== 0">
-                <span [ngClass]="{'dragging': dragging}"
+                <span [ngClass]="{'mona-dragging': dragging}"
                     (click)="onTickClick(tickSpanElement, sliderTrackElement, sliderHandlerElement)"></span>
             </span>
             <span class="mona-slider-tick" [ngClass]="{'mona-slider-tick-visible': showTicks}" #tickSpanElement *ngIf="tx !== ticks.length - 1">
-                <span [ngClass]="{'dragging': dragging}"
+                <span [ngClass]="{'mona-dragging': dragging}"
                       (click)="onTickClick(tickSpanElement, sliderTrackElement, sliderHandlerElement)"></span>
             </span>
         </ng-container>
     </div>
     <div class="mona-slider-tick-label-list">
-        <ng-container *ngFor="let tick of ticks;">
-            <span class="mona-slider-tick-label">
+        <ng-container *ngFor="let tick of ticks; let tx = index;">
+            <span class="mona-slider-tick-label" *ngIf="tx % labelStep === 0">
                 <span *ngIf="!tickValueTemplate">{{tick.value}}</span>
                 <span *ngIf="tickValueTemplate">
                     <ng-container *ngTemplateOutlet="tickValueTemplate; context: {$implicit: tick.value}"></ng-container>
@@ -25,7 +25,9 @@
         </ng-container>
     </div>
     <div class="mona-slider-handler"
-         [ngClass]="{'dragging': dragging}"
+         [ngClass]="{'mona-dragging': dragging}"
          [style.left.%]="handlerLeftPosition === 0 ? (sliderHandlerElement.clientWidth / -2 * 100.0) / sliderTrackElement.clientWidth : handlerLeftPosition"
+         [attr.tabindex]="0"
+         (keydown)="onHandlerKeyDown($event)"
          (mousedown)="onHandlerMouseDown()" #sliderHandlerElement></div>
 </div>
