--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
@@ -20,7 +20,7 @@ div.mona-slider {
             right: 0;
             border: none;
             transition: width ease-in-out 0.2s;
-            &.dragging {
+            &.mona-dragging {
                 transition: none;
             }
         }
@@ -32,14 +32,15 @@ div.mona-slider {
             align-items: center;
             justify-content: center;
             z-index: 4;
+            outline: none;
             transition: left ease-in-out 0.2s;
-            &.dragging {
+            &.mona-dragging {
                 transition: none;
             }
         }
         & .mona-slider-tick-list {
-            position: absolute;
             display: grid;
+            position: absolute;
             grid-auto-flow: column;
             grid-auto-columns: minmax(0, 1fr);
             width: 100%;
@@ -55,7 +56,7 @@ div.mona-slider {
                 width: 100%;
                 height: 100%;
                 z-index: 3;
-                &.dragging {
+                &.mona-dragging {
                     height: calc(var(--mona-input-height) * 2);
                 }
             }
